force-app/main/default/objects/Department__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <description>A unique short code identifier for the department used in reporting and integrations.</description>
    <inlineHelpText>Enter a unique code (e.g., ENG, SLS, HR). Maximum 10 characters.</inlineHelpText>
    <label>Department Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>