force-app/main/default/objects/Department__c/fields/Department_Head__c.field-meta.xml
<CustomField>
    <fullName>Department_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who manages and leads this department.</description>
    <inlineHelpText>Select the manager responsible for this department.</inlineHelpText>
    <label>Department Head</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Departments Led</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>