force-app/main/default/objects/Department__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <description>The official name of the department within the organization.</description>
    <inlineHelpText>Enter the full department name (e.g., Engineering, Sales, Human Resources).</inlineHelpText>
    <label>Department Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>