force-app/main/default/objects/Department__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this department is currently active and operational.</description>
    <inlineHelpText>Check this box if the department is active. Uncheck to deactivate.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>