force-app/main/default/objects/Department__c/listViews/Active_Departments.listView-meta.xml
<ListView>
    <fullName>Active_Departments</fullName>
    <columns>NAME</columns>
    <columns>Department_Name__c</columns>
    <columns>Department_Code__c</columns>
    <columns>Department_Head__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Departments</label>
</ListView>